[pom] Add hint on javadoc compliance